Update and rename testing_yolov11-Copy1.ipynb to Drowsiness Detection.ipynb

--- a/Drowsiness Detection.ipynb
+++ b/Drowsiness Detection.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = YOLO(\"best.pt\")"
+    "model = YOLO(\"results/runs/detect/train/weights/best.pt\")"
    ]
   },
   {
